made links the active page in nav

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
     <div class="topnav" id="myTopnav">
-        <a href="https://kylemelby.me" class="active">Home</a>
+        <a href="https://kylemelby.me">Home</a>
         <a href="https://kylemelby.me/blog">Blog</a>
-        <a href="https://kylemelby.me/links">Links</a>
+        <a href="https://kylemelby.me/links" class="active">Links</a>
                  <a href="https://www.linkedin.com/in/kylemelby">LinkedIn</a>
                           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
          <i class="fa fa-bars"></i>
