--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <meta name="viewport" content="width=device-width, initial scale=1">
            
     <style>
+        .html, body {
+           margin:0;
+           padding:0;
      .body {
             background:#fff;
             text-allign: center;
