--- a/index.html
+++ b/index.html
@@ -6,11 +6,22 @@
         <meta name="viewport" content="width=device-width, initial scale=1">
            
     <style>
-        .html, body {
+        
+       .html, body {
            margin:0;
            padding:0;
         }
-     .body {
+        .site-container {
+            padding-left: 0;
+            padding-right: 0;
+        }
+        .header{
+            padding: 60px;
+            text-allign: center;
+            background: #516fff;
+            color: white;
+        }   
+        .body {
             background:#fff;
             text-allign: center;
             color: black;
