--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
         </div>
         </nav>
 <header></header>
+    <br>
+    <br>
+    <h1><b><center>Kyle Melby</center></b></h1>
 <body>
  <footer><p><b><center>© 2020 Kyle Melby</center></b></p></footer>
 <script>function myFunction() {
