added picture and round rectangle

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
             background-color: #fff;
                 overflow: hidden;
             }
+        img {
+  border-radius: 50%;
+}
         .topnav a {
             float: left;
             display: block;
@@ -107,6 +110,8 @@
         </nav>
 <header></header>
     <br>
+    <br>
+    <img src="https://kylemelby.me/links/kylemelby.jpeg" alt="Kyle Melby">
     <br>
     <h1><b><center>Kyle Melby</center></b></h1>
 <body>
