image size change

--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@
       .topnav .icon {
           display: none;
           }
+        .center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
             
            @media screen and (max-width: 600px) {
                .topnav a:not(:first-child) {display: none;}
@@ -111,7 +117,7 @@
 <header></header>
     <br>
     <br>
-    <img src="https://kylemelby.me/links/kylemelby.jpeg" alt="Kyle Melby">
+    <img src="https://kylemelby.me/links/kylemelby.jpeg" alt="Kyle Melby" style="width:250px;height:250px;" class="center">
     <br>
     <h1><b><center>Kyle Melby</center></b></h1>
 <body>
