--- a/index.html
+++ b/index.html
@@ -71,7 +71,13 @@
   margin-right: auto;
   width: 50%;
 }
-            
+           .btn {
+
+BORDER:   color: black; height: 100px; width: 350px; background: white; font-size: 30px; border-radius: 16px; box-shadow:1px 4px #FAFAFA;
+
+} 
+			.btn:hover {
+            BORDER:   color: white; height: 100px; width: 350px; background: black; font-size: 30px; border-radius: 16px; box-shadow:1px 4px #FAFAFA;}
            @media screen and (max-width: 600px) {
                .topnav a:not(:first-child) {display: none;}
                .topnav a.icon {
@@ -117,10 +123,11 @@
 <header></header>
     <br>
     <br>
-    <img src="https://kylemelby.me/links/kylemelby.jpeg" alt="Kyle Melby" style="width:250px;height:250px;" class="center">
-    <br>
+    <img src="https://kylemelby.me/links/kylemelby.jpeg" alt="Kyle Melby" style="width:150px;height:150px;" class="center">
     <h1><b><center>Kyle Melby</center></b></h1>
 <body>
+<center><button class=btn >Link 1</button></center>
+<br>
  <footer><p><b><center>© 2020 Kyle Melby</center></b></p></footer>
 <script>function myFunction() {
         var x = document.getElementById("myTopnav");
