test of link page??

--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
   margin-right: auto;
   width: 50%;
 }
-           .btn {
+           .linkbutton {
 
-BORDER:   color: black; height: 100px; width: 350px; background: white; font-size: 30px; border-radius: 16px; box-shadow:1px 4px #FAFAFA;
+BORDER: border-style: solid;  color: black; height: 100px; width: 350px; background: white; font-size: 30px; border-radius: 16px; 
 
 } 
-			.btn:hover {
-            BORDER:   color: white; height: 100px; width: 350px; background: black; font-size: 30px; border-radius: 16px; box-shadow:1px 4px #FAFAFA;}
+			.linkbutton:hover {
+            BORDER: border-style: solid;  color: white; height: 100px; width: 350px; background: black; font-size: 30px; border-radius: 16px;}
            @media screen and (max-width: 600px) {
                .topnav a:not(:first-child) {display: none;}
                .topnav a.icon {
@@ -126,8 +126,14 @@ BORDER:   color: black; height: 100px; width: 350px; background: white; font-siz
     <img src="https://kylemelby.me/links/kylemelby.jpeg" alt="Kyle Melby" style="width:150px;height:150px;" class="center">
     <h1><b><center>Kyle Melby</center></b></h1>
 <body>
-<center><button class=btn >Link 1</button></center>
+	<center><b><button href="https://instagram.com/thestudyone" class= "linkbutton">@thestudyone Instagram</button></b><center>
+	<br>
+		<center><b><button href="https://twitter.com/thestudyone" class= "linkbutton">@thestudyone Twitter</button></b><center>
+			<br>
+		<center><b><button href="https://kylmel.wixsite.com/studyone" class="linkbutton">StudyOne</button></b></center>
 <br>
+		<center><b><button href="https://kylmel.wixsite.com/meltech" class="linkbutton">MelTech</button></b></center>
+		<br>
  <footer><p><b><center>© 2020 Kyle Melby</center></b></p></footer>
 <script>function myFunction() {
         var x = document.getElementById("myTopnav");
@@ -141,3 +147,4 @@ BORDER:   color: black; height: 100px; width: 350px; background: white; font-siz
    
         </body>  
 </html>
+
