--- a/index.html
+++ b/index.html
@@ -71,13 +71,18 @@
   margin-right: auto;
   width: 50%;
 }
-           .linkbutton {
-
-BORDER: border-style: solid;  color: black; height: 100px; width: 350px; background: white; font-size: 30px; border-radius: 16px; 
-
-} 
-			.linkbutton:hover {
-            BORDER: border-style: solid;  color: white; height: 100px; width: 350px; background: black; font-size: 30px; border-radius: 16px;}
+          .linkbutton {
+        padding: 15px 100px;
+        margin: 10px 4px;
+        color: black;
+background: white;
+        text: center;
+       height: 100px;
+width: 400px;
+display: inline-block;
+        text-decoration: none;
+font-size: 30px; border-radius: 16px;
+       }
            @media screen and (max-width: 600px) {
                .topnav a:not(:first-child) {display: none;}
                .topnav a.icon {
@@ -105,6 +110,7 @@ BORDER: border-style: solid;  color: black; height: 100px; width: 350px; backgro
             padding: 15px;
             }
 
+
             </style>
 </head>
 <nav>
@@ -126,13 +132,13 @@ BORDER: border-style: solid;  color: black; height: 100px; width: 350px; backgro
     <img src="https://kylemelby.me/links/kylemelby.jpeg" alt="Kyle Melby" style="width:150px;height:150px;" class="center">
     <h1><b><center>Kyle Melby</center></b></h1>
 <body>
-	<center><b><button href="https://instagram.com/thestudyone" class= "linkbutton">@thestudyone Instagram</button></b><center>
+	<center><b><a href="https://instagram.com/thestudyone" class= "linkbutton">@thestudyone on Instagram</a></b></center>
 	<br>
-		<center><b><button href="https://twitter.com/thestudyone" class= "linkbutton">@thestudyone Twitter</button></b><center>
+		<center><b><a href="https://twitter.com/thestudyone" class= "linkbutton">@thestudyone on Twitter</a></b><center>
 			<br>
-		<center><b><button href="https://kylmel.wixsite.com/studyone" class="linkbutton">StudyOne</button></b></center>
+		<center><b><a href="https://kylmel.wixsite.com/studyone" class="linkbutton">StudyOne</a></b></center>
 <br>
-		<center><b><button href="https://kylmel.wixsite.com/meltech" class="linkbutton">MelTech</button></b></center>
+		<center><a href="https://kylmel.wixsite.com/meltech" class="linkbutton"><b>MelTech</b></a></center>
 		<br>
  <footer><p><b><center>© 2020 Kyle Melby</center></b></p></footer>
 <script>function myFunction() {
@@ -147,4 +153,3 @@ BORDER: border-style: solid;  color: black; height: 100px; width: 350px; backgro
    
         </body>  
 </html>
-
