--- a/index.html
+++ b/index.html
@@ -75,7 +75,19 @@
         padding: 15px 100px;
         margin: 10px 4px;
         color: black;
-background: white;
+background: #FAFAFA;
+        text: center;
+       height: 100px;
+width: 400px;
+display: inline-block;
+        text-decoration: none;
+font-size: 30px; border-radius: 16px;
+       }
+	     .linkbutton:hover {
+        padding: 15px 100px;
+        margin: 10px 4px;
+        color: white;
+background: black;
         text: center;
        height: 100px;
 width: 400px;
