--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
   width: 50%;
 }
           .linkbutton {
-        padding: 15px 100px;
+        padding: 15px 15px;
         margin: 10px 4px;
         color: black;
-background: #FAFAFA;
-        text: center;
+background: #F2F2F2;
+        text-allign: center;
        height: 100px;
 width: 400px;
 display: inline-block;
@@ -84,11 +84,11 @@ display: inline-block;
 font-size: 30px; border-radius: 16px;
        }
 	     .linkbutton:hover {
-        padding: 15px 100px;
+        padding: 15px 15px;
         margin: 10px 4px;
         color: white;
 background: black;
-        text: center;
+        text-allign: center;
        height: 100px;
 width: 400px;
 display: inline-block;
@@ -165,3 +165,4 @@ font-size: 30px; border-radius: 16px;
    
         </body>  
 </html>
+
