made box shorter

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 background: #F2F2F2;
         text-allign: center;
        height: 100px;
-width: 400px;
+width: 350px;
 display: inline-block;
         text-decoration: none;
 font-size: 30px; border-radius: 16px;
@@ -90,7 +90,7 @@ font-size: 30px; border-radius: 16px;
 background: black;
         text-allign: center;
        height: 100px;
-width: 400px;
+width: 350;
 display: inline-block;
         text-decoration: none;
 font-size: 30px; border-radius: 16px;
