--- a/index.html
+++ b/index.html
@@ -73,27 +73,27 @@
 }
           .linkbutton {
         padding: 15px 15px;
-        margin: 10px 4px;
         color: black;
 background: #F2F2F2;
-        text-allign: center;
+        text-align: center;
+        vertical-align: middle;
        height: 75px;
 width: 300px;
 display: inline-block;
         text-decoration: none;
-font-size: 19px; border-radius: 16px;
+font-size: 25px; border-radius: 16px;
        }
 	     .linkbutton:hover {
         padding: 15px 15px;
-        margin: 10px 4px;
         color: white;
 background: black;
-        text-allign: center;
+        text-align: center;
+        vertical-align: middle;
        height: 75px;
 width: 300px;
 display: inline-block;
         text-decoration: none;
-font-size: 19px; border-radius: 16px;
+font-size: 25px; border-radius: 16px;
        }
            @media screen and (max-width: 600px) {
                .topnav a:not(:first-child) {display: none;}
@@ -144,9 +144,9 @@ font-size: 19px; border-radius: 16px;
     <img src="https://kylemelby.me/links/kylemelby.jpeg" alt="Kyle Melby" style="width:150px;height:150px;" class="center">
     <h1><b><center>Kyle Melby</center></b></h1>
 <body>
-	<center><b><a href="https://instagram.com/thestudyone" class= "linkbutton">@thestudyone on Instagram</a></b></center>
+	<center><b><a href="https://instagram.com/thestudyone" class= "linkbutton">@thestudyone Insta</a></b></center>
 	<br>
-		<center><b><a href="https://twitter.com/thestudyone" class= "linkbutton">@thestudyone on Twitter</a></b><center>
+		<center><b><a href="https://twitter.com/thestudyone" class= "linkbutton">@thestudyone Twitter</a></b><center>
 			<br>
 		<center><b><a href="https://kylmel.wixsite.com/studyone" class="linkbutton">StudyOne</a></b></center>
 <br>
