--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 background: #F2F2F2;
         text-align: center;
         vertical-align: middle;
-       height: 75px;
+       line-height: 75px;
 width: 300px;
 display: inline-block;
         text-decoration: none;
@@ -89,7 +89,7 @@ font-size: 25px; border-radius: 16px;
 background: black;
         text-align: center;
         vertical-align: middle;
-       height: 75px;
+       line-height: 75px;
 width: 300px;
 display: inline-block;
         text-decoration: none;
@@ -165,4 +165,3 @@ font-size: 25px; border-radius: 16px;
    
         </body>  
 </html>
-
