added classes survey

--- a/index.html
+++ b/index.html
@@ -144,6 +144,8 @@ font-size: 25px; border-radius: 16px;
     <img src="https://kylemelby.me/links/kylemelby.jpeg" alt="Kyle Melby" style="width:150px;height:150px;" class="center">
     <h1><b><center>Kyle Melby</center></b></h1>
 <body>
+	<center><a href="https://forms.gle/FYvAdAbj7KV6BF969" class="linkbutton"><b>Classes Survey for StudyOne</b></a></center>
+			<br>
 	<center><b><a href="https://instagram.com/thestudyone" class= "linkbutton">@thestudyone Insta</a></b></center>
 	<br>
 		<center><b><a href="https://twitter.com/thestudyone" class= "linkbutton">@thestudyone Twitter</a></b><center>
@@ -152,6 +154,7 @@ font-size: 25px; border-radius: 16px;
 <br>
 		<center><a href="https://kylmel.wixsite.com/meltech" class="linkbutton"><b>MelTech</b></a></center>
 		<br>
+		
  <footer><p><b><center>© 2020 Kyle Melby</center></b></p></footer>
 <script>function myFunction() {
         var x = document.getElementById("myTopnav");
