--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ font-size: 25px; border-radius: 16px;
     <img src="https://kylemelby.me/links/kylemelby.jpeg" alt="Kyle Melby" style="width:150px;height:150px;" class="center">
     <h1><b><center>Kyle Melby</center></b></h1>
 <body>
-	<center><a href="https://forms.gle/FYvAdAbj7KV6BF969" class="linkbutton"><b>Classes Survey for StudyOne</b></a></center>
+	<center><a href="https://bit.ly/joinstudy" class="linkbutton"><b>StudyOne Quizlet Class Join Link</b></a></center>
 			<br>
 	<center><b><a href="https://instagram.com/thestudyone" class= "linkbutton">@thestudyone Insta</a></b></center>
 	<br>
