--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         
         <div class="topnav" id="myTopnav">
             <a href="https://kylemelby.me">Home</a>
-            <a href="https://kemelby.com/about-me">About Me</a>
+            <a href="https://kemelby.com/aboutme">About Me</a>
             <a href="https://kemelby.com/links" class="active">Links</a>
                      <a href="https://www.linkedin.com/in/kylemelby">LinkedIn</a>
                               <a href="javascript:void(0);" class="icon" onclick="myFunction()">
