--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         
         <div class="topnav" id="myTopnav">
-            <a href="https://kylemelby.me">Home</a>
+            <a href="https://kemelby.com">Home</a>
             <a href="https://kemelby.com/aboutme">About Me</a>
             <a href="https://kemelby.com/links" class="active">Links</a>
                      <a href="https://www.linkedin.com/in/kylemelby">LinkedIn</a>
