--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <meta name="theme-color"
             content="#000000"
             media="(prefers-color-scheme: dark)">  
-            <link rel ="stylesheet" href="kemelby.com/styles.css" />
+            <link rel ="stylesheet" href="https://kemelby.com/styles.css" />
     
     </head>
     <nav>
