--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <header></header>
     <br>
     <br>
-    <img src="https://kemelby.com/links/kylemelby.jpeg" alt="Kyle Melby" style="width:150px;height:150px;" class="center">
+    <img src="https://kemelby.com/links/kylemelby.jpeg" alt="Kyle Melby" style="width:150px;height:150px;border-radius: 50%;" class="center">
     <h1><b><center>Kyle Melby</center></b></h1>
 <body>
 	<center><a href="https://kemelby.com" class="linkbutton"><b>My Website</b></a></center>
