--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Kyle Melby</title>
-            <link rel="shortcut icon" type="image/x-icon" href="../Documents/kemelby.github.io/favicon.ico">
+            <link rel="shortcut icon" type="image/x-icon" href="https://kemelby.github.io/favicon.ico">
            <link href="https://fonts.googleapis.com/css2?family=Lexand&display=swap" rel="stylesheet">
             <meta name="viewport" content="width=device-width, initial scale=1">
             <meta name="theme-color"
