--- a/index.html
+++ b/index.html
@@ -35,13 +35,11 @@
 <body>
 	<center><a href="https://kemelby.com" class="linkbutton"><b>My Website</b></a></center>
 			<br>
-	<center><b><a href="https://www.bethel.edu/news/articles/2023/october/midwest-rocketry-competition" class= "linkbutton">BU Rocket Club Article</a></b></center>
+	<center><b><a href="https://www.burockets.com" class= "linkbutton">Bethel Rocket Club</a></b></center>
 	<br>
 		<center><b><a href="https://github.com/kemelby" class= "linkbutton">My GitHub</a></b><center>
 			<br>
-		<center><b><a href="https://instagram.com/kymelby" class="linkbutton">My Insta</a></b></center>
-<br>
-		<center><a href="https://meltech.studyone.app" class="linkbutton"><b>MelTech</b></a></center>
+		<center><a href="https://www.linkedin.com/in/kylemelby" class="linkbutton"><b>My LinkedIn</b></a></center>
 		<br>
 		
  <footer><p><b><center>© 2024 Kyle Melby</center></b></p></footer>
