--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <meta name="theme-color"
             content="#000000"
             media="(prefers-color-scheme: dark)">  
-            <link rel ="stylesheet" href="https://kemelby.com/styles.css" />
+            <link rel ="stylesheet" href="https://kylemelby.com/styles.css" />
     
     </head>
     <nav>
@@ -18,9 +18,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         
         <div class="topnav" id="myTopnav">
-            <a href="https://kemelby.com">Home</a>
-            <a href="https://kemelby.com/aboutme">About Me</a>
-            <a href="https://kemelby.com/links" class="active">Links</a>
+            <a href="https://kylemelby.com">Home</a>
+            <a href="https://kylemelby.com/aboutme">About Me</a>
+            <a href="https://kylemelby.com/links" class="active">Links</a>
                      <a href="https://www.linkedin.com/in/kylemelby">LinkedIn</a>
                               <a href="javascript:void(0);" class="icon" onclick="myFunction()">
              <i class="fa fa-bars"></i>
@@ -30,10 +30,10 @@
 <header></header>
     <br>
     <br>
-    <img src="https://kemelby.com/links/kylemelby.jpeg" alt="Kyle Melby" style="width:150px;height:150px;border-radius: 50%;" class="center">
+    <img src="https://kylemelby.com/links/kylemelby.jpeg" alt="Kyle Melby" style="width:150px;height:150px;border-radius: 50%;" class="center">
     <h1><b><center>Kyle Melby</center></b></h1>
 <body>
-	<center><a href="https://kemelby.com" class="linkbutton"><b>My Website</b></a></center>
+	<center><a href="https://kylemelby.com" class="linkbutton"><b>My Website</b></a></center>
 			<br>
 	<center><b><a href="https://www.burockets.com" class= "linkbutton">Bethel Rocket Club</a></b></center>
 	<br>
